--- a/Brazilian_E-Commerce_Data_Analysis.ipynb
+++ b/Brazilian_E-Commerce_Data_Analysis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## 1. Introduction\n",
     "\n",
-    "In this repository, I would like to show some descriptive analysis of 'Olist Store' from Brazil. This data contains 100k orders information between 2016-2018.\n",
+    "I like to show some descriptive analysis of Commerce in Brazil. This data contains information between 2016-2018.\n",
     "\n",
     "Above analysis made by orders, geolocation, payments, seller, and products datasets. The aim of this project is finding the Top 10 products and sellers, analysis of orders by their geolocation and obtain information about Brazilian's online e-commerce profiles. \n"
    ]
